--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="scrapeEmails">Scarpe Email</button>
+    <button id="scrapeEmails">Check If Spam?</button>
     <ul id="emailList"></ul>
     <script src="script.js"></script>
 </body>
